WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284099
MediaStreamTrackProcessor::Source should not enqueue once it is closed
https://bugs.webkit.org/show_bug.cgi?id=284099
Summary
MediaStreamTrackProcessor::Source should not enqueue once it is closed
youenn fablet
Reported
2024-12-05 01:22:58 PST
MediaStreamTrackProcessor::Source should not enqueue once it is closed
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-05 01:23:21 PST
<
rdar://problem/140966032
>
EWS
Comment 2
2024-12-05 09:30:52 PST
Committed
287409@main
(7526d352bd58): <
https://commits.webkit.org/287409@main
> Reviewed commits have been landed. Closing PR #37487 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug